# cs1666_examples

./: .gitignore  README.md
bevy_demos/: .gitignore  Cargo.toml
bevy_demos/examples/: bv00_hello.rs  bv01_ecs.rs  bv02_basic.rs  bv03_key_events.rs  bv04_basic_motion.rs  bv05_better_motion.rs  bv06_tiling.rs  bv07_overengineered_tiling.rs  bv08_simple_bg_scroll.rs  bv09_side_scroll.rs  bv10_top_down_scroll.rs  bv11_animation.rs  bv12_rect_collision.rs  bv13_circ_collision.rs
bevy_project_structure/: Cargo.toml  README.md
bevy_project_structure/src/: level.rs  loading.rs  main.rs  music.rs  player.rs  win.rs
rust/rs02_vars_types/src/: main.rs
rust/rs03_tups_arr/src/: main.rs
rust/rs04_control_flow/src/: main.rs
rust/rs05_structs/src/: main.rs
rust/rs06_enum/src/: main.rs
rust/rs07_ownership/src/: main.rs
rust/rs08_iter_clos/src/: main.rs
rust/rs09_smart_point/src/: main.rs
rust/rs10_modules/src/: ignored.rs  indirect.rs  main.rs  shy.rs
rust/rs10_modules/src/nester/: mod.rs  nested_a.rs  nested_b.rs
rust/rs11_closures/: Cargo.toml
rust/rs11_closures/src/: main.rs
rust/rs12_error_handling/src/: main.rs
